--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.13.5",
     "axios": "^1.1.3",
+    "cypress": "^13.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -18,6 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll",
     "test:coverage": "yarn test --coverage --watchAll",
+    "cypress": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@testing-library/cypress": "^10.0.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
